--- a/config/zones/US-CENT-SPA.yaml
+++ b/config/zones/US-CENT-SPA.yaml
@@ -37,6 +37,9 @@ capacity:
     - datetime: '2025-01-01'
       source: EIA.gov
       value: 1403.6
+    - datetime: '2025-04-01'
+      source: EIA.gov
+      value: 1364.6
   hydro storage:
     - datetime: '2021-01-01'
       source: EIA.gov
