--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -14,6 +14,12 @@ capacity:
     - datetime: '2025-02-01'
       source: EIA.gov
       value: 27.6
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 67.6
+    - datetime: '2025-04-01'
+      source: EIA.gov
+      value: 107.6
   biomass:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -31,6 +37,9 @@ capacity:
     - datetime: '2025-02-01'
       source: EIA.gov
       value: 0.0
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 486.0
   gas:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -53,6 +62,9 @@ capacity:
     - datetime: '2025-02-01'
       source: EIA.gov
       value: 6743.3
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 6123.9
   geothermal:
     - datetime: '2021-01-01'
       source: EIA.gov
