--- a/config/zones/US-NW-PGE.yaml
+++ b/config/zones/US-NW-PGE.yaml
@@ -86,6 +86,9 @@ capacity:
     - datetime: '2024-12-01'
       source: EIA.gov
       value: 189.7
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 191.7
   unknown:
     - datetime: '2021-01-01'
       source: EIA.gov
