--- a/config/zones/US-NW-PSCO.yaml
+++ b/config/zones/US-NW-PSCO.yaml
@@ -23,6 +23,9 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 248.4
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 258.6
   biomass:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -50,6 +53,9 @@ capacity:
     - datetime: '2024-01-01'
       source: EIA.gov
       value: 6731.2
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 6784.4
   geothermal:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -82,6 +88,9 @@ capacity:
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 81.2
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 28.0
   solar:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -146,6 +155,9 @@ capacity:
     - datetime: '2025-02-01'
       source: EIA.gov
       value: 2131.3
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 2142.5
   unknown:
     - datetime: '2021-01-01'
       source: EIA.gov
