--- a/config/zones/US-SW-AZPS.yaml
+++ b/config/zones/US-SW-AZPS.yaml
@@ -26,6 +26,12 @@ capacity:
     - datetime: '2024-09-01'
       source: EIA.gov
       value: 617.0
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 984.0
+    - datetime: '2025-04-01'
+      source: EIA.gov
+      value: 1743.8
   biomass:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -34,6 +40,9 @@ capacity:
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 2062.1
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 1636.2
   gas:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -44,6 +53,9 @@ capacity:
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 2416.5
+    - datetime: '2025-04-01'
+      source: EIA.gov
+      value: 2602.5
   geothermal:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -89,6 +101,12 @@ capacity:
     - datetime: '2025-02-01'
       source: EIA.gov
       value: 1193.8
+    - datetime: '2025-03-01'
+      source: EIA.gov
+      value: 1563.8
+    - datetime: '2025-04-01'
+      source: EIA.gov
+      value: 2189.3
   unknown:
     - datetime: '2021-01-01'
       source: EIA.gov
