--- a/config/zones/BD.yaml
+++ b/config/zones/BD.yaml
@@ -104,13 +104,10 @@ capacity:
       source: Ember, Yearly electricity data
       value: 850.0
   wind:
-    - datetime: '2017-01-01'
-      source: Ember, Yearly electricity data
-      value: 0.0
-    - _comment: https://www.tbsnews.net/bangladesh/energy/countrys-first-commercial-wind-power-plant-starts-production-810678
-      datetime: '2024-03-08'
-      source: TBS News
-      value: 60.0
+    - _comment: https://en.powerchina.cn/2023-10/13/c_828590.htm
+      datetime: '2023-10-12'
+      source: POWERCHINA
+      value: 66.0
 contributors:
   - systemcatch
   - alixunderplatz
