--- a/config/zones/MD.yaml
+++ b/config/zones/MD.yaml
@@ -280,9 +280,9 @@ fallbackZoneMixes:
         unknown: 0.0027065851482313144
         wind: 0.03416068856152983
 parsers:
-  consumption: MD.fetch_consumption
+  consumption: ENTSOE.fetch_consumption
   price: MD.fetch_price
-  production: MD.fetch_production
+  production: ENTSOE.fetch_production
   productionCapacity: EMBER.fetch_production_capacity
 region: Europe
 sources:
