Move code to specific grid-india parser and change yaml files

--- a/config/exchanges/IN-EA_IN-NE.yaml
+++ b/config/exchanges/IN-EA_IN-NE.yaml
@@ -2,5 +2,5 @@ lonlat:
   - 88.232505
   - 26.451620
 parsers:
-  exchange: IN_EA.fetch_exchange
+  exchange: GRID_INDIA.fetch_exchange
 rotation: 46
