--- a/config/exchanges/IN-EA_IN-NO.yaml
+++ b/config/exchanges/IN-EA_IN-NO.yaml
@@ -2,5 +2,5 @@ lonlat:
   - 81.548111
   - 22.532074
 parsers:
-  exchange: IN_EA.fetch_exchange
+  exchange: GRID_INDIA.fetch_exchange
 rotation: -33
