--- a/config/exchanges/IN-EA_IN-SO.yaml
+++ b/config/exchanges/IN-EA_IN-SO.yaml
@@ -2,5 +2,5 @@ lonlat:
   - 81.073025
   - 17.788574
 parsers:
-  exchange: IN_EA.fetch_exchange
+  exchange: GRID_INDIA.fetch_exchange
 rotation: 40
