--- a/config/exchanges/IN-EA_NP.yaml
+++ b/config/exchanges/IN-EA_NP.yaml
@@ -2,5 +2,5 @@ lonlat:
   - 85.946364
   - 26.629889
 parsers:
-  exchange: IN_EA.fetch_exchange
+  exchange: GRID_INDIA.fetch_exchange
 rotation: 80
