--- a/config/exchanges/BT_IN-EA.yaml
+++ b/config/exchanges/BT_IN-EA.yaml
@@ -2,5 +2,5 @@ lonlat:
   - 89.387672
   - 26.847837
 parsers:
-  exchange: IN_EA.fetch_exchange
+  exchange: GRID_INDIA.fetch_exchange
 rotation: 88
