--- a/config/zones/AU-WA.yaml
+++ b/config/zones/AU-WA.yaml
@@ -314,6 +314,6 @@ fallbackZoneMixes:
 parsers:
   price: OPENNEM.fetch_price
   production: OPENNEM.fetch_production
-  productionCapacity: OPENNEM.fetch_production_capacity
+  productionCapacity: OPENELECTRICITY.fetch_production_capacity
 region: Oceania
 timezone: Australia/Perth
