--- a/config/zones/AU-QLD.yaml
+++ b/config/zones/AU-QLD.yaml
@@ -8,10 +8,16 @@ capacity:
     - datetime: '2024-01-01'
       source: opennem.org.au
       value: 336.0
+    - datetime: '2025-01-01'
+      source: https://openelectricity.org.au/
+      value: 1250.6
   biomass:
     - datetime: '2020-01-01'
       source: opennem.org.au
       value: 276.5
+    - datetime: '2025-01-01'
+      source: https://openelectricity.org.au/
+      value: 313.28
   coal:
     - datetime: '2020-01-01'
       source: opennem.org.au
@@ -20,6 +26,9 @@ capacity:
     - datetime: '2020-01-01'
       source: opennem.org.au
       value: 2692.0
+    - datetime: '2025-01-01'
+      source: https://openelectricity.org.au/
+      value: 3201.98
   hydro:
     - datetime: '2020-01-01'
       source: opennem.org.au
@@ -32,32 +41,41 @@ capacity:
     - datetime: '2020-01-01'
       source: opennem.org.au
       value: 449.0
+    - datetime: '2025-01-01'
+      source: https://openelectricity.org.au/
+      value: 453.0
   solar:
-    - datetime: '2023-01-01'
-      source: opennem.org.au
-      value: 8416.86
-    - datetime: '2022-01-01'
-      source: opennem.org.au
-      value: 8077.86
-    - datetime: '2021-01-01'
-      source: opennem.org.au
-      value: 7706.36
     - datetime: '2020-01-01'
       source: opennem.org.au
       value: 7691.36
-  wind:
-    - datetime: '2023-01-01'
-      source: opennem.org.au
-      value: 1023.2
-    - datetime: '2022-01-01'
-      source: opennem.org.au
-      value: 843.2
     - datetime: '2021-01-01'
       source: opennem.org.au
-      value: 687.2
+      value: 7706.36
+    - datetime: '2022-01-01'
+      source: opennem.org.au
+      value: 8077.86
+    - datetime: '2023-01-01'
+      source: opennem.org.au
+      value: 8416.86
+    - datetime: '2025-01-01'
+      source: https://openelectricity.org.au/
+      value: 4364.81
+  wind:
     - datetime: '2020-01-01'
       source: opennem.org.au
       value: 644.0
+    - datetime: '2021-01-01'
+      source: opennem.org.au
+      value: 687.2
+    - datetime: '2022-01-01'
+      source: opennem.org.au
+      value: 843.2
+    - datetime: '2023-01-01'
+      source: opennem.org.au
+      value: 1023.2
+    - datetime: '2025-01-01'
+      source: https://openelectricity.org.au/
+      value: 2648.2
 contributors:
   - brandongalbraith
   - jarek
@@ -328,9 +346,9 @@ fallbackZoneMixes:
         unknown: 0.0
         wind: 0.04511033753549817
 parsers:
+  consumptionForecast: AEMO.fetch_consumption_forecast
   price: OPENNEM.fetch_price
   production: OPENNEM.fetch_production
-  productionCapacity: OPENNEM.fetch_production_capacity
-  consumptionForecast: AEMO.fetch_consumption_forecast
+  productionCapacity: OPENELECTRICITY.fetch_production_capacity
 region: Oceania
 timezone: Australia/Brisbane
