--- a/config/zones/FI.yaml
+++ b/config/zones/FI.yaml
@@ -59,6 +59,9 @@ capacity:
     - datetime: '2025-05-09'
       source: fingrid.fi
       value: 1367
+    - datetime: '2025-07-07'
+      source: fingrid.fi
+      value: 1485
   unknown:
     - datetime: '2023-01-01'
       source: entsoe.eu
@@ -85,6 +88,9 @@ capacity:
     - datetime: '2025-06-10'
       source: fingrid.fi
       value: 8760
+    - datetime: '2025-07-07'
+      source: fingrid.fi
+      value: 8885
 contributors:
   - corradio
   - nessie2013
