--- a/config/zones/CA-AB.yaml
+++ b/config/zones/CA-AB.yaml
@@ -230,5 +230,6 @@ parsers:
   price: CA_AB.fetch_price
   production: CA_AB.fetch_production
   productionPerModeForecast: CA_AB.fetch_wind_solar_forecasts
+  gridAlerts: CA_AB.fetch_grid_alerts
 region: Americas
 timezone: America/Edmonton
