--- a/config/zones/IN-KA.yaml
+++ b/config/zones/IN-KA.yaml
@@ -217,3 +217,5 @@ sources:
   Souther Regional Load Dispatch Center Allocation Limits 2018-2019:
     link: http://srldc.org/2018-19srallocation.aspx
 timezone: Asia/Kolkata
+zone_name: Unknown
+country_name: India
