--- a/config/zones/IN-EA.yaml
+++ b/config/zones/IN-EA.yaml
@@ -32,6 +32,9 @@ capacity:
     - datetime: '2023-12-01'
       source: mnre.gov.in
       value: 1017.1
+    - datetime: '2025-06-30'
+      source: mnre.gov.in
+      value: 1562.73
   wind:
     - datetime: '2023-12-01'
       source: mnre.gov.in
