--- a/config/zones/IN-NE.yaml
+++ b/config/zones/IN-NE.yaml
@@ -32,6 +32,9 @@ capacity:
     - datetime: '2023-12-01'
       source: mnre.gov.in
       value: 236.9
+    - datetime: '2025-06-30'
+      source: mnre.gov.in
+      value: 331.53
   wind:
     - datetime: '2023-12-01'
       source: mnre.gov.in
