--- a/config/zones/IN-NO.yaml
+++ b/config/zones/IN-NO.yaml
@@ -32,6 +32,9 @@ capacity:
     - datetime: '2023-12-01'
       source: mnre.gov.in
       value: 25012.2
+    - datetime: '2025-06-30'
+      source: mnre.gov.in
+      value: 40245.36
   wind:
     - datetime: '2023-12-01'
       source: mnre.gov.in
