add ENTSO-E parsers to CY
(cherry picked from commit e6782063a2076023a96ce8c078a34fd72700ad5f)

--- a/config/zones/CY.yaml
+++ b/config/zones/CY.yaml
@@ -354,8 +354,12 @@ fallbackZoneMixes:
         unknown: 0.0
         wind: 0.035798118790591575
 parsers:
+  consumption: ENTSOE.fetch_consumption
+  consumptionForecast: ENTSOE.fetch_consumption_forecast
+  generationForecast: ENTSOE.fetch_generation_forecast
   production: CY.fetch_production
   productionCapacity: EMBER.fetch_production_capacity
+  productionPerModeForecast: ENTSOE.fetch_wind_solar_forecasts
 region: Asia
 sources:
   EU-ETS, CERA 2018 Report:
